# open-ore-mapper

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PROVENANCE.md  README.md  ROADMAP.md  SECURITY.md  SPECTRAL_LIBRARIES_RESEARCH.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-01-fastapi-served-web-app.md  (+1 more)
examples/: aviris_204_wavelengths.json  aviris_wavelengths.json  demo_library.csv  demo_scene.tif  manual_wavelengths.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: user-flow.spec.ts
frontend/src/: App.tsx
infra/: env.template
scripts/: build_realistic_library.py  download_hyperspectral.py  download_relab.py  validate_pipeline.py
src/open_ore_mapper/: __init__.py  ace.py  api.py  cli.py  continuum_removal.py  emit_client.py  mineral_features.py  mtmf.py  preprocessing.py  public_scenes.py  qc.py  relab_fetcher.py  rendering.py  sam.py  schemas.py  service.py  sff.py  spectral_library.py  store.py  sunsal.py  tileserver.py  tiling.py  unmixing.py  vegetation.py  wavelengths.py
tests/: test_ace.py  test_api.py  test_bbox_jobs.py  test_cli.py  test_continuum_removal.py  test_e2e_mineral_detection.py  test_emit_client.py  test_mtmf.py  test_preprocessing.py  test_qc.py  test_relab_fetcher.py  test_rendering.py  test_sam.py  test_service.py  test_sff.py  test_spectral_library.py  test_store.py  test_sunsal.py  test_tileserver.py  test_tiling.py  test_unmixing.py  test_vegetation.py  test_wavelengths.py
(+30 files in other folders)
