[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-ore-mapper"
version = "0.1.0"
description = "Open-source surface mineral signature mapping with SAM and NNLS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Open Ore Mapper Contributors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "tifffile>=2023.7.10",
  "h5py>=3.8",
  "pillow>=10",
  "httpx>=0.27",
  "lxml>=5",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
dev = ["pytest>=8", "ruff>=0.8", "mypy>=1.10"]
emit = ["xarray>=2024", "netcdf4>=1.6", "earthaccess>=0.9"]

[project.scripts]
open-ore-mapper = "open_ore_mapper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/open_ore_mapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_decorators = false
